# Ume/CMakeLists.txt
cmake_minimum_required(VERSION 3.20)

# Add our cmake include directory to the search path
set(LAP_CMAKE_DIR "${CMAKE_SOURCE_DIR}/cmake")
set(CMAKE_MODULE_PATH ${LAP_CMAKE_DIR} ${CMAKE_MODULE_PATH})

include(DisableIntree)

project(UME VERSION 1.0.0 LANGUAGES CXX)

include(GNUInstallDirs)

include(BuildType)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED on)

include(pkgs/Catch2Support)
include(pkgs/DoxygenSupport)
include(pkgs/KokkosSupport)
include(pkgs/MPISupport)
include(pkgs/OpenACCSupport)

set(VALID_ANNOTATE_OPTIONS "papi" "gem5fs")

if(NOT "${CMAKE_ANNOTATE_TYPE}notset" STREQUAL "notset")
    list(FIND VALID_ANNOTATE_OPTIONS ${CMAKE_ANNOTATE_TYPE} INDEX)
    if(NOT INDEX GREATER -1)
        message(FATAL_ERROR "CMAKE_ANNOTATE_TYPE is set to ${CMAKE_ANNOTATE_TYPE} which is an invalid option.")
    endif()
    message(${PROJECT_SOURCE_DIR})
    if( "${ANNOTATE_INSTALLATION_PATH}notset" STREQUAL "notset")
        message("ANNOTATE_INSTALLATION_PATH not defined. Defaulting to ${PROJECT_SOURCE_DIR}/../annotate")
        set( ANNOTATE_INSTALLATION_PATH "${PROJECT_SOURCE_DIR}/../annotate")
    endif()

    #-------------------------------------------------------------------------#
    # Checking common files in annotate exist.
    if(NOT EXISTS "${ANNOTATE_INSTALLATION_PATH}")
            message(FATAL_ERROR "${ANNOTATE_INSTALLATION_PATH} does not exist")
    endif()
    if(NOT EXISTS "${ANNOTATE_INSTALLATION_PATH}/include/")
        message(FATAL_ERROR "${ANNOTATE_INSTALLATION_PATH}/include does not exist")
    endif()
    if(NOT EXISTS "${ANNOTATE_INSTALLATION_PATH}/include/annotate.h")
        message(FATAL_ERROR "${ANNOTATE_INSTALLATION_PATH}/include/annotate.h does not exist")
    endif()
    if(NOT EXISTS "${ANNOTATE_INSTALLATION_PATH}/lib")
        message(FATAL_ERROR "${ANNOTATE_INSTALLATION_PATH}/lib does not exist.")
    endif()
    if(NOT EXISTS "${ANNOTATE_INSTALLATION_PATH}/lib/libannotate.${CMAKE_ANNOTATE_TYPE}.a")
        message(FATAL_ERROR "${ANNOTATE_INSTALLATION_PATH}/lib/libannotate.${CMAKE_ANNOTATE_TYPE}.a does not exist")
    endif()
    if(NOT EXISTS "${ANNOTATE_INSTALLATION_PATH}/lib/libannotate.${CMAKE_ANNOTATE_TYPE}.so")
        message(FATAL_ERROR "${ANNOTATE_INSTALLATION_PATH}/lib/libannotate.${CMAKE_ANNOTATE_TYPE}.so does not exist")
    endif()

    set( ANNOTATE_CXX_FLAGS "ANNOTATE")
    set( ANNOTATE_BASE_INC ${ANNOTATE_INSTALLATION_PATH}/include)
    set( ANNOTATE_BASE_LIB_DIR ${ANNOTATE_INSTALLATION_PATH}/lib)

    if( ${CMAKE_ANNOTATE_TYPE} STREQUAL "papi")
        if("${PAPI_INSTALLATION_PATH}notset" STREQUAL "notset")
            message("PAPI_INSTALLATION_PATH not set.")
            # Don't know if PAPI provides FindPAPI.cmake or PAPIConfig.cmake.
            find_package(PAPI QUIET)
            if(NOT PAPI_FOUND)
                message("PAPI not found system-wide. Defaulting to ${ANNOTATE_INSTALLATION_PATH}/papi/install")
                set( PAPI_INSTALLATION_PATH "${ANNOTATE_INSTALLATION_PATH}/papi/install")
            endif()
        endif()
        if(NOT EXISTS "${PAPI_INSTALLATION_PATH}")
            message(FATAL_ERROR "${PAPI_INSTALLATION_PATH} does not exist.")
        endif()
        if(NOT EXISTS "${PAPI_INSTALLATION_PATH}/include")
            message(FATAL_ERROR "${PAPI_INSTALLATION_PATH}/include does not exist.")
        endif()
        if(NOT EXISTS "${PAPI_INSTALLATION_PATH}/lib")
            message(FATAL_ERROR "${PAPI_INSTALLATION_PATH}/lib does not exist.")
        endif()
        if(NOT EXISTS "${PAPI_INSTALLATION_PATH}/lib/libpapi.a")
            message(FATAL_ERROR "${PAPI_INSTALLATION_PATH}/libpapi.a does not exist.")
        endif()
        if(NOT EXISTS "${PAPI_INSTALLATION_PATH}/lib/libpapi.so")
            message(FATAL_ERROR "${PAPI_INSTALLATION_PATH}/libpapi.so does not exist.")
        endif()
        find_package(Threads REQUIRED)
        set( ANNOTATE_TYPE_INC ${PAPI_INSTALLATION_PATH}/include)
        set( ANNOTATE_TYPE_LIB_DIR ${PAPI_INSTALLATION_PATH}/lib)
        set( ANNOTATE_LIB_OBJS annotate.papi papi pthread)
    endif()

    if( ${CMAKE_ANNOTATE_TYPE} STREQUAL "gem5fs")
        if("${GEM5_INSTALLATION_PATH}notset" STREQUAL "notset")
            message("GEM5_INSTALLATION_PATH not set.")
            message("Defaulting to ${ANNOTATE_INSTALLATION_PATH}/gem5")
            set( GEM5_INSTALLATION_PATH "${ANNOTATE_INSTALLATION_PATH}/gem5")
        endif()
        if(NOT EXISTS "${GEM5_INSTALLATION_PATH}")
            message(FATAL_ERROR "${GEM5_INSTALLATION_PATH} does not exist.")
        endif()
        if(NOT EXISTS "${GEM5_INSTALLATION_PATH}/include")
            message(FATAL_ERROR "${GEM5_INSTALLATION_PATH}/include does not exist.")
        endif()
        if(NOT EXISTS "${GEM5_INSTALLATION_PATH}/lib")
            message(FATAL_ERROR "${GEM5_INSTALLATION_PATH}/lib does not exist.")
        endif()
        if(NOT EXISTS "${GEM5_INSTALLATION_PATH}/lib/libm5.a")
            message(FATAL_ERROR "${GEM5_INSTALLATION_PATH}/libm5.a does not exist.")
        endif()
        set( ANNOTATE_TYPE_INC ${GEM5_INSTALLATION_PATH}/include)
        set( ANNOTATE_TYPE_LIB_DIR ${GEM5_INSTALLATION_PATH}/lib)
        set( ANNOTATE_LIB_OBJS annotate.gem5fs m5)
    endif()
endif()

add_subdirectory(src)
